--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,10 @@
 {
   "development": {
-    "host": "localhost",
     "username": "root",
-    "password": "",
-    "database": "burgers_db",
+    "password": null,
+    "database": "database_development",
+    "host": "127.0.0.1",
     "dialect": "mysql"
-
   },
   "test": {
     "username": "root",
